syntax = "proto3";

package GrpcUserClient;

import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (UserProfile);
  rpc CreateUser(CreateUserRequest) returns (UserProfile);
  rpc GetUserByEmailAndPassword(GetUserByEmailAndPasswordRequest) returns (UserProfile);
}

message GetUserByIdRequest {
  google.protobuf.Int32Value id = 1;
}

message GetUserByEmailAndPasswordRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message CreateUserRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue password = 3;
}

message UserProfile {
  google.protobuf.Int32Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}
